# GB-Golf-Optimizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  contest_config.json  pyproject.toml  wsgi.py
.claude/: settings.local.json
.github/workflows/: mirror.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/debug/resolved/: lock-column-golfer-name.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-data-foundation/: 01-04-SUMMARY.md
.planning/phases/04-constraint-foundation/: 04-01-SUMMARY.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md
.planning/phases/05-serialization-and-re-optimize-route/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-VALIDATION.md
.planning/phases/06-lock-exclude-ui/: 06-01-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  (+1 more)
deploy/: DEPLOY.md  deploy.sh
gbgolf/: changelog.py  db.py  fetcher.py
gbgolf/data/: __init__.py  __main__.py  matching.py  models.py  projections.py  report.py  roster.py
gbgolf/optimizer/: __init__.py  constraints.py  engine.py
gbgolf/web/: __init__.py  routes.py
migrations/versions/: 4938bf64fe7e_create_fetches_and_projections_tables.py  b7c4e9f12a03_add_datagolf_updated_at_to_fetches.py
scripts/: datagolf_response_sample.json  diagnose_lineup4.py
tasks/: deploy-script-deps.md  fix-duplicate-card-handling.md
tests/: conftest.py  test_changelog.py  test_config.py  test_constraints.py  test_fetcher.py  test_filters.py  test_optimizer.py  test_projections.py  test_roster.py  test_web.py
(+12 files in other folders)
