[project]
name = "gbgolf"
# Mirrors the topmost entry in CHANGELOG.md. Bump in the same commit as the
# changelog entry. Single source of truth for version is CHANGELOG.md.
version = "1.2.2"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "python-dateutil>=2.9",
    "pulp>=3.3.0",
    "flask>=3.0",
    "gunicorn>=20.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.1",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "flask>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gbgolf*"]
